proyectos/11/src/jackGrammarParser.py
# Generated from jackGrammar.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class jackGrammarParser ( Parser ):

    grammarFileName = "jackGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'{'", "'}'", "'static'", "'field'", 
                     "','", "';'", "'int'", "'char'", "'boolean'", "'constructor'", 
                     "'function'", "'method'", "'void'", "'('", "')'", "'var'", 
                     "'let'", "'['", "']'", "'='", "'if'", "'else'", "'while'", 
                     "'do'", "'return'", "'.'", "'+'", "'-'", "'*'", "'/'", 
                     "'&'", "'|'", "'<'", "'>'", "'~'", "'true'", "'false'", 
                     "'null'", "'this'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "KEYWORD", "SYMBOL", "INTEGERCONSTANT", 
                      "STRINGCONSTANT", "IDENTIFIER", "WHITESPACE", "NEWLINE", 
                      "COMMENT" ]

    RULE_classes = 0
    RULE_classVarDec = 1
    RULE_types = 2
    RULE_subroutineDec = 3
    RULE_parameterList = 4
    RULE_subroutineBody = 5
    RULE_varDec = 6
    RULE_className = 7
    RULE_subroutineName = 8
    RULE_varName = 9
    RULE_statements = 10
    RULE_statement = 11
    RULE_letStatement = 12
    RULE_ifStatement = 13
    RULE_whileStatement = 14
    RULE_doStatement = 15
    RULE_returnStatement = 16
    RULE_expression = 17
    RULE_term = 18
    RULE_subroutineCall = 19
    RULE_expressionList = 20
    RULE_op = 21
    RULE_unaryop = 22
    RULE_keywordconstant = 23

    ruleNames =  [ "classes", "classVarDec", "types", "subroutineDec", "parameterList", 
                   "subroutineBody", "varDec", "className", "subroutineName", 
                   "varName", "statements", "statement", "letStatement", 
                   "ifStatement", "whileStatement", "doStatement", "returnStatement", 
                   "expression", "term", "subroutineCall", "expressionList", 
                   "op", "unaryop", "keywordconstant" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    KEYWORD=41
    SYMBOL=42
    INTEGERCONSTANT=43
    STRINGCONSTANT=44
    IDENTIFIER=45
    WHITESPACE=46
    NEWLINE=47
    COMMENT=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ClassesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def className(self):
            return self.getTypedRuleContext(jackGrammarParser.ClassNameContext,0)


        def classVarDec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.ClassVarDecContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.ClassVarDecContext,i)


        def subroutineDec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.SubroutineDecContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.SubroutineDecContext,i)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_classes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClasses" ):
                listener.enterClasses(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClasses" ):
                listener.exitClasses(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClasses" ):
                return visitor.visitClasses(self)
            else:
                return visitor.visitChildren(self)




    def classes(self):

        localctx = jackGrammarParser.ClassesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_classes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(jackGrammarParser.T__0)
            self.state = 49
            self.className()
            self.state = 50
            self.match(jackGrammarParser.T__1)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jackGrammarParser.T__3 or _la==jackGrammarParser.T__4:
                self.state = 51
                self.classVarDec()
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jackGrammarParser.T__10) | (1 << jackGrammarParser.T__11) | (1 << jackGrammarParser.T__12))) != 0):
                self.state = 57
                self.subroutineDec()
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 63
            self.match(jackGrammarParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassVarDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def types(self):
            return self.getTypedRuleContext(jackGrammarParser.TypesContext,0)


        def varName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.VarNameContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.VarNameContext,i)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_classVarDec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassVarDec" ):
                listener.enterClassVarDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassVarDec" ):
                listener.exitClassVarDec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassVarDec" ):
                return visitor.visitClassVarDec(self)
            else:
                return visitor.visitChildren(self)




    def classVarDec(self):

        localctx = jackGrammarParser.ClassVarDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classVarDec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            _la = self._input.LA(1)
            if not(_la==jackGrammarParser.T__3 or _la==jackGrammarParser.T__4):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 66
            self.types()
            self.state = 67
            self.varName()
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jackGrammarParser.T__5:
                self.state = 68
                self.match(jackGrammarParser.T__5)
                self.state = 69
                self.varName()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 75
            self.match(jackGrammarParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def className(self):
            return self.getTypedRuleContext(jackGrammarParser.ClassNameContext,0)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_types

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypes" ):
                listener.enterTypes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypes" ):
                listener.exitTypes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypes" ):
                return visitor.visitTypes(self)
            else:
                return visitor.visitChildren(self)




    def types(self):

        localctx = jackGrammarParser.TypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_types)
        try:
            self.state = 81
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [jackGrammarParser.T__7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.match(jackGrammarParser.T__7)
                pass
            elif token in [jackGrammarParser.T__8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.match(jackGrammarParser.T__8)
                pass
            elif token in [jackGrammarParser.T__9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 79
                self.match(jackGrammarParser.T__9)
                pass
            elif token in [jackGrammarParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 4)
                self.state = 80
                self.className()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubroutineDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subroutineName(self):
            return self.getTypedRuleContext(jackGrammarParser.SubroutineNameContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(jackGrammarParser.ParameterListContext,0)


        def subroutineBody(self):
            return self.getTypedRuleContext(jackGrammarParser.SubroutineBodyContext,0)


        def types(self):
            return self.getTypedRuleContext(jackGrammarParser.TypesContext,0)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_subroutineDec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubroutineDec" ):
                listener.enterSubroutineDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubroutineDec" ):
                listener.exitSubroutineDec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubroutineDec" ):
                return visitor.visitSubroutineDec(self)
            else:
                return visitor.visitChildren(self)




    def subroutineDec(self):

        localctx = jackGrammarParser.SubroutineDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_subroutineDec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jackGrammarParser.T__10) | (1 << jackGrammarParser.T__11) | (1 << jackGrammarParser.T__12))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 86
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [jackGrammarParser.T__13]:
                self.state = 84
                self.match(jackGrammarParser.T__13)
                pass
            elif token in [jackGrammarParser.T__7, jackGrammarParser.T__8, jackGrammarParser.T__9, jackGrammarParser.IDENTIFIER]:
                self.state = 85
                self.types()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 88
            self.subroutineName()
            self.state = 89
            self.match(jackGrammarParser.T__14)
            self.state = 90
            self.parameterList()
            self.state = 91
            self.match(jackGrammarParser.T__15)
            self.state = 92
            self.subroutineBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def types(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.TypesContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.TypesContext,i)


        def varName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.VarNameContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.VarNameContext,i)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)




    def parameterList(self):

        localctx = jackGrammarParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jackGrammarParser.T__7) | (1 << jackGrammarParser.T__8) | (1 << jackGrammarParser.T__9) | (1 << jackGrammarParser.IDENTIFIER))) != 0):
                self.state = 94
                self.types()
                self.state = 95
                self.varName()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==jackGrammarParser.T__5:
                    self.state = 97
                    self.match(jackGrammarParser.T__5)
                    self.state = 98
                    self.types()
                    self.state = 99
                    self.varName()
                    self.state = 105
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubroutineBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statements(self):
            return self.getTypedRuleContext(jackGrammarParser.StatementsContext,0)


        def varDec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.VarDecContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.VarDecContext,i)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_subroutineBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubroutineBody" ):
                listener.enterSubroutineBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubroutineBody" ):
                listener.exitSubroutineBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubroutineBody" ):
                return visitor.visitSubroutineBody(self)
            else:
                return visitor.visitChildren(self)




    def subroutineBody(self):

        localctx = jackGrammarParser.SubroutineBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_subroutineBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(jackGrammarParser.T__1)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jackGrammarParser.T__16:
                self.state = 109
                self.varDec()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.statements()
            self.state = 116
            self.match(jackGrammarParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def types(self):
            return self.getTypedRuleContext(jackGrammarParser.TypesContext,0)


        def varName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.VarNameContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.VarNameContext,i)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_varDec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDec" ):
                listener.enterVarDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDec" ):
                listener.exitVarDec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDec" ):
                return visitor.visitVarDec(self)
            else:
                return visitor.visitChildren(self)




    def varDec(self):

        localctx = jackGrammarParser.VarDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_varDec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(jackGrammarParser.T__16)
            self.state = 119
            self.types()
            self.state = 120
            self.varName()
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jackGrammarParser.T__5:
                self.state = 121
                self.match(jackGrammarParser.T__5)
                self.state = 122
                self.varName()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 128
            self.match(jackGrammarParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(jackGrammarParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return jackGrammarParser.RULE_className

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassName" ):
                listener.enterClassName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassName" ):
                listener.exitClassName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassName" ):
                return visitor.visitClassName(self)
            else:
                return visitor.visitChildren(self)




    def className(self):

        localctx = jackGrammarParser.ClassNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_className)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(jackGrammarParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubroutineNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(jackGrammarParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return jackGrammarParser.RULE_subroutineName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubroutineName" ):
                listener.enterSubroutineName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubroutineName" ):
                listener.exitSubroutineName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubroutineName" ):
                return visitor.visitSubroutineName(self)
            else:
                return visitor.visitChildren(self)




    def subroutineName(self):

        localctx = jackGrammarParser.SubroutineNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_subroutineName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(jackGrammarParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(jackGrammarParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return jackGrammarParser.RULE_varName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarName" ):
                listener.enterVarName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarName" ):
                listener.exitVarName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarName" ):
                return visitor.visitVarName(self)
            else:
                return visitor.visitChildren(self)




    def varName(self):

        localctx = jackGrammarParser.VarNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_varName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(jackGrammarParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.StatementContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.StatementContext,i)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = jackGrammarParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jackGrammarParser.T__17) | (1 << jackGrammarParser.T__21) | (1 << jackGrammarParser.T__23) | (1 << jackGrammarParser.T__24) | (1 << jackGrammarParser.T__25))) != 0):
                self.state = 136
                self.statement()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def letStatement(self):
            return self.getTypedRuleContext(jackGrammarParser.LetStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(jackGrammarParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(jackGrammarParser.WhileStatementContext,0)


        def doStatement(self):
            return self.getTypedRuleContext(jackGrammarParser.DoStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(jackGrammarParser.ReturnStatementContext,0)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = jackGrammarParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_statement)
        try:
            self.state = 147
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [jackGrammarParser.T__17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.letStatement()
                pass
            elif token in [jackGrammarParser.T__21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.ifStatement()
                pass
            elif token in [jackGrammarParser.T__23]:
                self.enterOuterAlt(localctx, 3)
                self.state = 144
                self.whileStatement()
                pass
            elif token in [jackGrammarParser.T__24]:
                self.enterOuterAlt(localctx, 4)
                self.state = 145
                self.doStatement()
                pass
            elif token in [jackGrammarParser.T__25]:
                self.enterOuterAlt(localctx, 5)
                self.state = 146
                self.returnStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varName(self):
            return self.getTypedRuleContext(jackGrammarParser.VarNameContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.ExpressionContext,i)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_letStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetStatement" ):
                listener.enterLetStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetStatement" ):
                listener.exitLetStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLetStatement" ):
                return visitor.visitLetStatement(self)
            else:
                return visitor.visitChildren(self)




    def letStatement(self):

        localctx = jackGrammarParser.LetStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_letStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(jackGrammarParser.T__17)
            self.state = 150
            self.varName()
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==jackGrammarParser.T__18:
                self.state = 151
                self.match(jackGrammarParser.T__18)
                self.state = 152
                self.expression()
                self.state = 153
                self.match(jackGrammarParser.T__19)


            self.state = 157
            self.match(jackGrammarParser.T__20)
            self.state = 158
            self.expression()
            self.state = 159
            self.match(jackGrammarParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(jackGrammarParser.ExpressionContext,0)


        def statements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.StatementsContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.StatementsContext,i)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):
